--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -60,7 +60,7 @@ body:
   - type: input
     id: version
     attributes:
-      label: sptth version (optional)
+      label: holonomy version (optional)
       placeholder: v0.0.2 / commit hash / cargo run
     validations:
       required: false
