--- a/config.example.toml
+++ b/config.example.toml
@@ -13,8 +13,8 @@ A = ["127.0.0.1"]
 AAAA = ["::1"]
 
 [tls]
-ca_dir = "~/.config/sptth/ca"
-cert_dir = "~/.config/sptth/certs"
+ca_dir = "~/.config/holonomy/ca"
+cert_dir = "~/.config/holonomy/certs"
 
 [[proxy]]
 domain = "example.com"
